# MyRPC

./: .gitignore  README.md
example/: friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  call_friendservice.cc  call_userservice.cc
lib/include/: mprpc_channel.h  mprpc_config.h  mprpc_controller.h  mprpc_header.pb.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpc_app.cc  mprpc_channel.cc  mprpc_config.cc  mprpc_controller.cc  mprpc_header.pb.cc  mprpc_provider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpc_app.h  mprpc_provider.h
test/protobuf/: main.cc  test.proto
